# filemq

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  ci_build.sh  configure.ac  configure.in  license.xml  project.xml  version.sh
bindings/ruby/lib/filemq/: ffi.rb
bindings/ruby/spec/: ffi_spec.rb  spec_helper.rb
builds/android/: Android.mk  build.sh
builds/cygwin/: Makefile.cygwin
builds/mingw32/: Makefile.mingw32
builds/msvc/: platform.h  resource.rc
builds/msvc/vs2008/filemq/: filemq.sln  filemq.vcproj
builds/msvc/vs2010/: build.bat  filemq.sln
builds/msvc/vs2010/filemq/: filemq.vcxproj
builds/msvc/vs2010/filemq_client/: filemq_client.vcxproj
builds/msvc/vs2010/filemq_selftest/: filemq_selftest.vcxproj
builds/msvc/vs2010/filemq_server/: filemq_server.vcxproj
builds/msvc/vs2010/libfilemq/: libfilemq.import.xml  libfilemq.vcxproj
builds/msvc/vs2012/: build.bat  filemq.import.props  filemq.sln
builds/msvc/vs2012/filemq/: filemq.vcxproj
builds/msvc/vs2012/filemq_client/: filemq_client.vcxproj
builds/msvc/vs2012/filemq_selftest/: filemq_selftest.props  filemq_selftest.vcxproj
builds/msvc/vs2012/filemq_server/: filemq_server.vcxproj
builds/msvc/vs2012/libfilemq/: libfilemq.vcxproj
builds/msvc/vs2013/: build.bat  filemq.sln
builds/msvc/vs2013/filemq/: filemq.vcxproj  filemq.vcxproj.filters
builds/msvc/vs2013/filemq_client/: filemq_client.vcxproj
builds/msvc/vs2013/filemq_selftest/: filemq_selftest.vcxproj
builds/msvc/vs2013/filemq_server/: filemq_server.vcxproj
builds/msvc/vs2013/libfilemq/: libfilemq.props  libfilemq.vcxproj  libfilemq.vcxproj.filters
builds/msvc/vs2015/: build.bat  filemq.sln
builds/msvc/vs2015/filemq_client/: filemq_client.vcxproj
builds/msvc/vs2015/filemq_selftest/: filemq_selftest.vcxproj
builds/qt-android/: build.sh
doc/: Makefile.am  asciidoc.conf  filemq.txt  filemq_client.doc  filemq_client.txt  filemq_server.doc  filemq_server.txt  fmq_chunk.txt  fmq_client.doc  fmq_client.txt  fmq_config.txt  fmq_dir.txt  fmq_file.txt  fmq_hash.txt  fmq_msg.doc  fmq_msg.txt  fmq_patch.txt  fmq_sasl.txt  fmq_server.doc  fmq_server.txt  fmq_server_protocol.txt  mkman  rfc19.txt
include/: filemq.h  filemq_library.h  filemq_prelude.h  fmq.h  fmq_chunk.h  fmq_client.h  fmq_config.h  fmq_diff.h  fmq_dir.h  fmq_file.h  fmq_hash.h  fmq_msg.h  fmq_patch.h  fmq_sasl.h  fmq_server.h  fmq_sha.h
java/: README.md  gen-filemq-jeromq.sh  pom.xml
java/model/: fmq_client.xml  fmq_client_sub.xml  fmq_server.xml  fmq_server_mount.xml  fmq_server_selftest.xml  fmq_server_sub.xml  generate
model/: .fmq_client.xml.swp  client_c.gsl  client_java.gsl  codec_c.gsl  codec_java.gsl  fmq_client.xml  fmq_client_fsm.xml  fmq_client_sub.xml  fmq_msg.xml  fmq_server.xml  fmq_server_fsm.xml  fmq_server_mount.xml  fmq_server_selftest.xml  fmq_server_sub.xml  generate  graphs.gsl  license.xml  server_c.gsl  server_java.gsl
packaging/debian/: control  filemq-dev.install  filemq.dsc  filemq.install  libfilemq2.install  rules
packaging/redhat/: filemq.spec
scripts/: Makefile.am  client_c.gsl  client_java.gsl  codec_c.gsl  codec_java.gsl  server_c.gsl  server_java.gsl
sha-1.1/: .gitignore  ChangeLog  Makefile.am  README  README.SHA  config.h.in  configure.in  hmac-sha1.c  hmac-sha1.h  hmac-sha256.c  hmac-sha256.h  hmac-sha384.c  hmac-sha384.h  hmac-sha512.c  hmac-sha512.h  sha.1  sha.c  sha1.c  sha1.h  sha256.c  sha256.h  sha384.c  sha384.h  sha512.c  sha512.h  shatest.c  version.h
src/: .gitignore  Makefile.am  Makemodule.am  anonymous.cfg  client_c.gsl  client_test.cfg  codec_java.gsl  filemq.c  filemq_classes.h  filemq_client.c  filemq_selftest.c  filemq_server.c  fmq_chunk.c  fmq_client.c  fmq_client.xml  fmq_client_engine.inc  fmq_client_fsm.xml  fmq_config.c  fmq_diff.c  fmq_dir.c  fmq_file.c  fmq_hash.c  fmq_msg.bnf  fmq_msg.c  fmq_msg.xml  fmq_patch.c  fmq_sasl.c  fmq_selftest.c  fmq_server.c  fmq_server.xml  fmq_server_engine.inc  fmq_server_fsm.xml  fmq_server_mount.xml  fmq_server_selftest.xml  fmq_server_sub.xml  fmq_sha.c  libfilemq.pc.in  libfmq.pc.in  library.gsl  plain.cfg  (+4 more)
src/fmqroot/: README
win32/: README  filemq.sln  filemq.vcxproj  filemq.vcxproj.filters  filemq_selftest.vcxproj
(+26 files in other folders)
