dnl Process this file with autoconf to produce a configure script.
AC_INIT(sha.c)
AM_INIT_AUTOMAKE(sha, 1.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CHECK_TYPE([uint8_t],,
[AC_DEFINE([uint8_t], [unsigned char],
[Define to `unsigned char' if not defined.])])
AC_CHECK_TYPE([uint32_t],,
[AC_DEFINE([uint32_t], [unsigned int],
[Define to `unsigned int' if not defined.])])
AC_CHECK_TYPE([uint64_t],,
[AC_DEFINE([uint64_t], [unsigned long long],
[Define to `unsigned long long' if not defined.])])

dnl Checks for library functions.
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile)
